[gd_scene load_steps=55 format=3 uid="uid://dyxomf0byld4o"]

[ext_resource type="Script" uid="uid://d3oyx6fptafqx" path="res://scenes/player.gd" id="1_g2els"]
[ext_resource type="Shader" path="res://scenes/shiledPlayer.gdshader" id="1_hax0n"]
[ext_resource type="Shader" uid="uid://de8kwq1p65hls" path="res://scenes/flicker.gdshader" id="2_fjrip"]
[ext_resource type="Texture2D" uid="uid://d0byiya60sjrj" path="res://graphic/assets_ray/ssds/knight3.png" id="3_3v2ag"]
[ext_resource type="Texture2D" uid="uid://bk40x0m0cdcpa" path="res://graphic/assets_ray/ssds/kngiht_gun.png" id="4_f1ej7"]
[ext_resource type="Texture2D" uid="uid://dxkaxiq3mnw5h" path="res://graphic/spider/spiderOnPlayer2.png" id="5_f1ej7"]
[ext_resource type="Texture2D" uid="uid://dk3e1k3mfcijy" path="res://graphic/guns/fire.png" id="6_tuyoq"]
[ext_resource type="Texture2D" uid="uid://cqil8hgaifse4" path="res://graphic/assets_ray/ssds/knight_run.png" id="7_3v2ag"]
[ext_resource type="Texture2D" uid="uid://ds41q3jndmfhe" path="res://graphic/assets_ray/ssds/spiderOnPlayerGun1.png" id="8_a8ls1"]
[ext_resource type="Texture2D" uid="uid://wahaltqieu1e" path="res://graphic/assets_ray/ssds/knight_run_gun.png" id="8_f1ej7"]
[ext_resource type="Texture2D" uid="uid://k4m5ggyll2h3" path="res://graphic/assets_ray/ssds/knight_run2.png" id="8_jej6c"]
[ext_resource type="Texture2D" uid="uid://dsq6yxetlncip" path="res://graphic/assets_ray/ssds/knight_run_gun2.png" id="8_oprun"]
[ext_resource type="Texture2D" uid="uid://dgg0igejaavu0" path="res://graphic/assets_ray/jump_anim/jump_anim0.png" id="8_y4r1p"]
[ext_resource type="Texture2D" uid="uid://cd4l1c0effi5" path="res://graphic/assets_ray/jump_anim/jump_anim1.png" id="9_d2wvv"]
[ext_resource type="Texture2D" uid="uid://culisdu5au6v8" path="res://graphic/assets_ray/jump_anim/jump_anim2.png" id="10_3v2ag"]
[ext_resource type="PackedScene" uid="uid://dxoey22irvm5" path="res://scenes/health_bar.tscn" id="11_d2wvv"]
[ext_resource type="Texture2D" uid="uid://lvyoms1i0ljw" path="res://graphic/assets_ray/ssds/spiderOnPlayerGun2.png" id="11_qfm1y"]
[ext_resource type="Shader" path="res://scenes/shield.gdshader" id="12_fulsm"]
[ext_resource type="Texture2D" uid="uid://ci1dh4fltuppl" path="res://graphic/playerShield/playerShield.png" id="12_qfm1y"]
[ext_resource type="Texture2D" uid="uid://cniluqrrwt7v6" path="res://graphic/playerShield/playerShield1.png" id="14_hax0n"]
[ext_resource type="Texture2D" uid="uid://d3pl06k1wnr8k" path="res://graphic/playerShield/playerShield2.png" id="15_t4otl"]
[ext_resource type="Texture2D" uid="uid://b3drgt347v6bk" path="res://graphic/playerShield/playerShield3.png" id="16_j2b1d"]
[ext_resource type="Texture2D" uid="uid://egl5oqly3cca" path="res://graphic/playerShield/playerShield4.png" id="17_cs1tg"]
[ext_resource type="Texture2D" uid="uid://dojxn848wy38e" path="res://graphic/playerShield/playerShield5.png" id="18_2dvfe"]
[ext_resource type="Texture2D" uid="uid://li8on2udoog5" path="res://graphic/playerShield/playerShield6.png" id="19_giy8y"]
[ext_resource type="Texture2D" uid="uid://cigrcvc2sko1f" path="res://graphic/playerShield/playerShield7.png" id="20_fdfoy"]
[ext_resource type="Texture2D" uid="uid://bbyts7mqrmebd" path="res://graphic/playerShield/playerShield8.png" id="21_hhpqf"]
[ext_resource type="Texture2D" uid="uid://6dsyo8vhrt1k" path="res://graphic/playerShield/playerShield9.png" id="22_g5jhy"]
[ext_resource type="Texture2D" uid="uid://bymplj21uqblu" path="res://graphic/playerShield/playerShield10.png" id="23_holxr"]
[ext_resource type="Texture2D" uid="uid://b310yi68srq03" path="res://graphic/playerShield/playerShield11.png" id="24_mx1m4"]
[ext_resource type="Texture2D" uid="uid://bd5kywdg12gro" path="res://graphic/playerShield/playerShield12.png" id="25_4gjji"]
[ext_resource type="Texture2D" uid="uid://c5gjc3sqxyji2" path="res://graphic/playerShield/playerShield13.png" id="26_u2ulf"]
[ext_resource type="Texture2D" uid="uid://cvagcfrj74x57" path="res://graphic/playerShield/playerShield14.png" id="27_6e8lb"]
[ext_resource type="Texture2D" uid="uid://b1uniovdcg4jk" path="res://graphic/playerShield/playerShield15.png" id="28_2gdjj"]
[ext_resource type="Texture2D" uid="uid://b6y0tfkwhyyt8" path="res://graphic/playerShield/playerShield16.png" id="29_sc3ue"]
[ext_resource type="Texture2D" uid="uid://b7uuwrxank4k0" path="res://graphic/playerShield/playerShield17.png" id="30_lxlsd"]
[ext_resource type="Texture2D" uid="uid://dkbotkjk047tg" path="res://graphic/playerShield/playerShield18.png" id="31_ha2mi"]
[ext_resource type="Texture2D" uid="uid://c0mgfqy7lryeo" path="res://graphic/playerShield/playerShield19.png" id="32_apa73"]
[ext_resource type="Texture2D" uid="uid://bw6545ktg4aeh" path="res://graphic/playerShield/playerShieldGray.png" id="39_j2b1d"]
[ext_resource type="FontFile" uid="uid://kg08gr31fkiq" path="res://fonts/Sixtyfour-Regular-VariableFont_BLED,SCAN.ttf" id="40_cs1tg"]
[ext_resource type="Script" uid="uid://bst18w2ks3wk3" path="res://scenes/cameraLevel1.gd" id="41_2dvfe"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t4otl"]
shader = ExtResource("1_hax0n")
shader_parameter/whiteness = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_smehm"]
shader = ExtResource("2_fjrip")
shader_parameter/whiteness_color = Color(1, 1, 1, 1)
shader_parameter/amount = 0.0
shader_parameter/glitch_chance = 0.0
shader_parameter/explosion_speed = 2.0
shader_parameter/particle_size = 20.0
shader_parameter/glitch_speed = 7.0
shader_parameter/shake_strength = 0.02
shader_parameter/noise_strength = 0.2

[sub_resource type="SpriteFrames" id="SpriteFrames_g2els"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_3v2ag")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_f1ej7")
}],
"loop": true,
"name": &"idle_gun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_f1ej7")
}],
"loop": true,
"name": &"idle_gun_spider",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_3v2ag")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_f1ej7")
}],
"loop": true,
"name": &"jump_gun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_a8ls1")
}],
"loop": true,
"name": &"jump_gun_spider",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_jej6c")
}, {
"duration": 1.0,
"texture": ExtResource("7_3v2ag")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_oprun")
}, {
"duration": 1.0,
"texture": ExtResource("8_f1ej7")
}],
"loop": true,
"name": &"walk_gun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_qfm1y")
}, {
"duration": 1.0,
"texture": ExtResource("8_a8ls1")
}],
"loop": true,
"name": &"walk_gun_spider",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j2b1d"]
shader = ExtResource("12_fulsm")
shader_parameter/brightness = 0.33600001596
shader_parameter/opacity = 0.8270000392825

[sub_resource type="SpriteFrames" id="SpriteFrames_fulsm"]
animations = [{
"frames": [{
"duration": 0.3,
"texture": ExtResource("12_qfm1y")
}, {
"duration": 0.3,
"texture": ExtResource("14_hax0n")
}, {
"duration": 0.3,
"texture": ExtResource("15_t4otl")
}, {
"duration": 0.3,
"texture": ExtResource("16_j2b1d")
}, {
"duration": 0.3,
"texture": ExtResource("17_cs1tg")
}, {
"duration": 0.3,
"texture": ExtResource("18_2dvfe")
}, {
"duration": 0.3,
"texture": ExtResource("19_giy8y")
}, {
"duration": 0.3,
"texture": ExtResource("20_fdfoy")
}, {
"duration": 0.3,
"texture": ExtResource("21_hhpqf")
}, {
"duration": 0.3,
"texture": ExtResource("22_g5jhy")
}, {
"duration": 0.3,
"texture": ExtResource("23_holxr")
}, {
"duration": 0.3,
"texture": ExtResource("24_mx1m4")
}, {
"duration": 0.3,
"texture": ExtResource("25_4gjji")
}, {
"duration": 0.3,
"texture": ExtResource("26_u2ulf")
}, {
"duration": 0.3,
"texture": ExtResource("27_6e8lb")
}, {
"duration": 0.3,
"texture": ExtResource("28_2gdjj")
}, {
"duration": 0.3,
"texture": ExtResource("29_sc3ue")
}, {
"duration": 0.3,
"texture": ExtResource("30_lxlsd")
}, {
"duration": 0.3,
"texture": ExtResource("31_ha2mi")
}, {
"duration": 0.3,
"texture": ExtResource("32_apa73")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3vyb7"]
radius = 9.0

[sub_resource type="Gradient" id="Gradient_jej6c"]
offsets = PackedFloat32Array(0.24725275, 0.63736266)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jej6c"]
gradient = SubResource("Gradient_jej6c")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="SpriteFrames" id="SpriteFrames_jej6c"]
animations = [{
"frames": [{
"duration": 0.05,
"texture": ExtResource("8_y4r1p")
}, {
"duration": 1.0,
"texture": ExtResource("9_d2wvv")
}, {
"duration": 1.0,
"texture": ExtResource("10_3v2ag")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jej6c"]
size = Vector2(31, 6)

[sub_resource type="Animation" id="Animation_dbbda"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_4es8y"]
resource_name = "death_animation"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.6333333, 2.9, 3.9333334),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yj223"]
_data = {
&"RESET": SubResource("Animation_dbbda"),
&"death_animation": SubResource("Animation_4es8y")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
material = SubResource("ShaderMaterial_t4otl")
collision_layer = 2
collision_mask = 5
script = ExtResource("1_g2els")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_smehm")
position = Vector2(1, -10)
sprite_frames = SubResource("SpriteFrames_g2els")
animation = &"walk_gun_spider"
autoplay = "idle"

[node name="ShieldArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="ShieldArea"]
visible = false
light_mask = 2
visibility_layer = 2
material = SubResource("ShaderMaterial_j2b1d")
position = Vector2(1, 4)
sprite_frames = SubResource("SpriteFrames_fulsm")
autoplay = "default"

[node name="trwanieTarczy" type="Timer" parent="ShieldArea"]
wait_time = 2.0
one_shot = true

[node name="cooldownTarczy" type="Timer" parent="ShieldArea"]
wait_time = 9.9
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 5)
shape = SubResource("CapsuleShape2D_3vyb7")

[node name="Timers" type="Node" parent="."]

[node name="CooldownTimer" type="Timer" parent="Timers"]
wait_time = 0.422
one_shot = true

[node name="FireTimer" type="Timer" parent="Timers"]
wait_time = 0.144
one_shot = true

[node name="InvicibilityTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="PortalTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="GainHealth" type="Timer" parent="Timers"]

[node name="WaitTimer" type="Timer" parent="Timers"]
wait_time = 3.0
one_shot = true

[node name="jumpTimer" type="Timer" parent="Timers"]
wait_time = 0.05

[node name="jumpTimerEnd" type="Timer" parent="Timers"]
wait_time = 0.05
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="Timers"]
wait_time = 0.15
one_shot = true

[node name="Fire" type="Node2D" parent="."]

[node name="FireLeft" type="Sprite2D" parent="Fire"]
visible = false
position = Vector2(-21, 5.5)
texture = ExtResource("6_tuyoq")
flip_h = true

[node name="PointLight2D" type="PointLight2D" parent="Fire/FireLeft"]
position = Vector2(2.3841858e-07, -0.49999988)
scale = Vector2(0.12890625, 0.125)
color = Color(0.2056467, 0.7151441, 0.7887302, 1)
energy = 3.1
texture = SubResource("GradientTexture2D_jej6c")

[node name="FireRight" type="Sprite2D" parent="Fire"]
visible = false
position = Vector2(19, 5.5)
texture = ExtResource("6_tuyoq")

[node name="PointLight2D2" type="PointLight2D" parent="Fire/FireRight"]
position = Vector2(1.0000011, -0.5)
scale = Vector2(0.14257813, 0.12499999)
color = Color(0.2056467, 0.7151441, 0.7887302, 1)
energy = 3.1
texture = SubResource("GradientTexture2D_jej6c")

[node name="jumpAnimation" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="jumpAnimation"]
visible = false
position = Vector2(1, 17)
sprite_frames = SubResource("SpriteFrames_jej6c")
animation = &"jump"
autoplay = "jump"
frame_progress = 0.13861173

[node name="HealthBar" parent="." instance=ExtResource("11_d2wvv")]

[node name="CooldownBar" type="ProgressBar" parent="."]
modulate = Color(1, 0.8642304, 0.8412026, 1)
offset_left = -15.0
offset_top = -20.0
offset_right = 10.0
offset_bottom = -15.0
show_percentage = false

[node name="colision" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="colision"]
position = Vector2(-2, -11)
shape = SubResource("RectangleShape2D_jej6c")

[node name="ShieldPoint" type="Marker2D" parent="."]
position = Vector2(1, -25)

[node name="shieldBarCanv" type="CanvasLayer" parent="."]

[node name="shieldBar" type="TextureProgressBar" parent="shieldBarCanv"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -391.0
offset_top = -149.0
offset_right = -327.0
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2, 2)
max_value = 10.0
step = 0.01
fill_mode = 4
texture_under = ExtResource("39_j2b1d")
texture_progress = ExtResource("12_qfm1y")

[node name="ShieldTimerLabel" type="Label" parent="shieldBarCanv"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -339.0
offset_top = -33.0
offset_right = -299.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.63375676, 0.6337568, 0.63375676, 1)
theme_override_fonts/font = ExtResource("40_cs1tg")
text = "2"
horizontal_alignment = 1

[node name="FadeLayer" type="CanvasLayer" parent="."]
layer = 100
visible = false

[node name="ColorRect" type="ColorRect" parent="FadeLayer"]
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeLayer"]
libraries = {
&"": SubResource("AnimationLibrary_yj223")
}
speed_scale = 2.0

[node name="CameraTarget" type="Marker2D" parent="."]
position = Vector2(19, 0)

[node name="Level1Camera" type="Camera2D" parent="CameraTarget"]
position = Vector2(107, 0)
offset = Vector2(0, -40)
zoom = Vector2(5.5, 5.5)
process_callback = 0
limit_left = 191
limit_right = 10000003
position_smoothing_enabled = true
position_smoothing_speed = 2.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.1
drag_top_margin = 0.5
drag_right_margin = 0.1
script = ExtResource("41_2dvfe")

[connection signal="timeout" from="ShieldArea/trwanieTarczy" to="." method="_on_trwanie_tarczy_timeout"]
[connection signal="timeout" from="ShieldArea/cooldownTarczy" to="." method="_on_cooldown_tarczy_timeout"]
[connection signal="timeout" from="Timers/CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="timeout" from="Timers/FireTimer" to="." method="_on_fire_timer_timeout"]
[connection signal="timeout" from="Timers/InvicibilityTimer" to="." method="_on_invicibility_timer_timeout"]
[connection signal="timeout" from="Timers/PortalTimer" to="." method="_on_portal_timer_timeout"]
[connection signal="timeout" from="Timers/GainHealth" to="." method="_on_gain_health_timeout"]
[connection signal="timeout" from="Timers/WaitTimer" to="." method="_on_wait_timer_timeout"]
[connection signal="timeout" from="Timers/jumpTimer" to="." method="_on_jump_timer_timeout"]
[connection signal="timeout" from="Timers/jumpTimerEnd" to="." method="_on_jump_timer_end_timeout"]
[connection signal="area_entered" from="colision" to="." method="_on_colision_area_entered"]
